<resources>
    <string name="app_name">OkrApp</string>

    <string name="confirm">确认</string>
    <string name="key_success">成功</string>
    <string name="key_fail">失败</string>

    <string name="test_network_request">网络请求测试</string>
    <string name="test">测试</string>
    <string name="test_1">测试1</string>
    <string name="test_2">测试2</string>
    <string name="test_3">测试3</string>


    <string name="home">主页</string>
    <string name="message">消息</string>
    <string name="setting">设置</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>